# 5_CW

./: README.md  company.txt  config.py  db_manager.py  main.py  pyproject.toml  utils.py
